<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.AddStoryActivity">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        >
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            >
            <ImageView
                android:id="@+id/add_story_thumbnail"
                android:layout_width="match_parent"
                android:layout_height="320dp"
                android:contentDescription="@string/add_photo"
                android:src="@drawable/baseline_image_24"
                />
            <LinearLayout
                android:id="@+id/button_bar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/add_story_thumbnail"
                >
                <Button
                android:id="@+id/camera_button"
                android:layout_weight="1"
                android:layout_margin="16dp"
                android:layout_height="wrap_content"
                android:layout_width="0dp"
                android:text="@string/camera"
                app:icon="@drawable/baseline_camera_alt_24"
                />
                <Button
                    android:id="@+id/gallery_button"
                    android:layout_weight="1"
                    android:layout_margin="16dp"
                    android:layout_height="wrap_content"
                    android:layout_width="0dp"
                    android:text="@string/gallery"
                    app:icon="@drawable/baseline_photo_album_24"
                    />
            </LinearLayout>
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/description_input_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/button_bar"
                android:layout_marginHorizontal="16dp"
                >
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/ed_add_description"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/description"
                    android:maxLength="25"
                    >
                </com.google.android.material.textfield.TextInputEditText>
            </com.google.android.material.textfield.TextInputLayout>
            <com.google.android.material.materialswitch.MaterialSwitch
                android:id="@+id/switch_location"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="16dp"
                android:layout_marginTop="16dp"
                android:layout_below="@id/description_input_layout"
                android:checked="true"
                android:text="@string/with_location"
                android:textStyle="bold"
                />
            <ProgressBar
                android:id="@+id/pg_bar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="16dp"
                android:layout_below="@id/switch_location"
                android:visibility="invisible"
                />
            <Button
                android:id="@+id/button_add"
                android:layout_marginVertical="16dp"
                android:layout_marginHorizontal="8dp"
                android:layout_below="@id/switch_location"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/upload"
                />
        </RelativeLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>